feat: Complete sourcing intelligence module refactoring and testing

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,10 +7,6 @@ addopts =
     -ra
     -q
     --strict-markers
-    --cov=dropshipping
-    --cov-report=term-missing
-    --cov-report=html
-    --cov-report=xml
     --maxfail=1
     --tb=short
 markers =
@@ -19,3 +15,4 @@ markers =
     slow: Slow tests
     api: Tests that require API access
     db: Tests that require database access
+    asyncio: Asyncio tests
